Jupyter Notebook file

--- a/NYC_CensusData.ipynb
+++ b/NYC_CensusData.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br><b><center>New York City - Census Data<center/><b/> <br/>\n",
+    "# Data Science Project\n",
+    "## New York City - Census Data\n",
     "    \n",
-    "    \n",
-    "<center>Danny Lam<center/>\n",
-    "<center>Julio Gutierrez<center/>\n",
-    "<center>Yannick Brossel<center/>"
+    "**Danny Lam**\\\n",
+    "**Julio Gutierrez**\\\n",
+    "**Yannick Brossel**"
    ]
   },
   {
@@ -1217,7 +1217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><b>1. Let's Consider our Population - Demographics<center/>"
+    "## <center>1. Let's Consider our Population - Demographics</center>"
    ]
   },
   {
@@ -1753,7 +1753,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><b>2. Wealth and Ethnic Disparities - Disparities<center/>"
+    "## <center>2. Wealth and Ethnic Disparities - Disparities<center/>"
    ]
   },
   {
@@ -2988,7 +2988,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><b>3. Indicators of Wealth - Indicators<center/>"
+    "## <center>3. Indicators of Wealth - Indicators<center/>"
    ]
   },
   {
@@ -3803,7 +3803,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><b>4. Searching for our own Indicator - Sector<center/>"
+    "## <center>4. Searching for our own Indicator - Sector<center/>"
    ]
   },
   {
@@ -4070,7 +4070,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><b>Statistical Testing"
+    "## <center>Statistical Testing"
    ]
   },
   {
@@ -4412,7 +4412,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><b>Conclusion"
+    "**<center>Conclusion**"
    ]
   },
   {
@@ -4444,8 +4444,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center> <b>Thank you for your time!"
+    "**<center> <b>Thank you for your time!**"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
