--- a/NYC_CensusData.ipynb
+++ b/NYC_CensusData.ipynb
@@ -7,8 +7,8 @@
     "# Data Science Project\n",
     "## New York City - Census Data\n",
     "    \n",
-    "**Danny Lam**\\\n",
-    "**Julio Gutierrez**\\\n",
+    "**Danny Lam**|\\n",
+    "**Julio Gutierrez**|\\n",
     "**Yannick Brossel**"
    ]
   },
@@ -1217,7 +1217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <center>1. Let's Consider our Population - Demographics</center>"
+    "## 1. Let's Consider our Population - Demographics"
    ]
   },
   {
